# vbn-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  mkdocs.yml  netlify.toml  pyproject.toml  sessions.csv
configs/: default.yaml
docs/: index.md
environment/: environment.yml  requirements.txt
legacy/: README.md  pyproject.toml  sessions.txt
legacy/.virtual_documents/notebooks/: 01_preview_first_session.ipynb
legacy/configs/: default.yaml
legacy/notebooks/: 01_preview_first_session.ipynb
legacy/scripts/: download_session.py  export_frames.py  prepare_next_videos.py  preview_video.py  run_dlc_inference.py  run_sleap_inference.py  train_sleap.py  video_manifest.py
legacy/src/vbn/: __init__.py  cache.py  config.py  frames.py  io.py  utils.py  video.py
legacy/src/vbn/pose/: sleap.py
legacy/tests/: test_video_discovery.py
notebooks/: 00_Setup_and_Configuration.ipynb  01_Session_Discovery_and_Metadata.ipynb  01_preview_first_session.ipynb  02_Neural_Data_Spikes_and_Events.ipynb  03_Behavior_and_Task_Alignment.ipynb  04_Eye_Tracking_QC_and_Features.ipynb  05_Video_IO_and_Frame_Timebase.ipynb  06_Pose_Estimation_Setup_SLEAP_or_DLC.ipynb  07_Pose_to_Motifs_Feature_Engineering.ipynb  08_Neural_Behavior_Fusion_and_Modeling.ipynb  09_End_to_End_Run_and_QC_Checklist.ipynb  10_Modal_SuperAnimal_Inference.ipynb  11_Cross_Session_Replication.ipynb
overrides/: main.html
reports/: A2_area_matched.csv  A2_summary.json  A_area_active_vs_passive.csv  A_summary.json  B2_change_hierarchy_lick_controlled.csv  B2_summary.json  B_change_hierarchy.csv  B_summary.json  C_summary.json  D_summary.json  (+23 more)
(+113 files in other folders)
